<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bruno.inventoryapp.EditorActivity"
    android:layout_margin="@dimen/fab_margin">
    <EditText
        android:id="@+id/editor_name"
        android:hint="@string/productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editor_price"
        android:hint="@string/price"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/basic"
            android:text="@string/quantity"/>
        <EditText
            android:inputType="number"
            android:id="@+id/quantity_counter"
            android:paddingLeft="8dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="Insert quantity"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/quantity_lower"
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/quantity_add"
            android:text="+"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/supplier_name"
        android:hint="@string/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/supplier_phone"
        android:hint="@string/supplier_phone"
        android:inputType="number"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/supplier_email"
        android:hint="@string/supplier_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/image_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_image"/>
    <Button
        android:id="@+id/order_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order More"/>
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
